tests/ui/comptime/comptime_trait.stderr
error: `#[rustc_comptime]` attribute cannot be used on traits
  --> $DIR/comptime_trait.rs:3:1
   |
LL | #[rustc_comptime]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_comptime]` can be applied to functions and inherent impl blocks

error: `#[rustc_comptime]` attribute cannot be used on trait impl blocks
  --> $DIR/comptime_trait.rs:11:1
   |
LL | #[rustc_comptime]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_comptime]` can be applied to functions and inherent impl blocks

error: `#[rustc_comptime]` attribute cannot be used on trait aliases
  --> $DIR/comptime_trait.rs:22:1
   |
LL | #[rustc_comptime]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_comptime]` can be applied to functions and inherent impl blocks

error[E0015]: cannot call non-const method `<T as Trait>::method` in constants
  --> $DIR/comptime_trait.rs:28:7
   |
LL |     t.method()
   |       ^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0015`.
